# data-science-learning-paths

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  ape-advanced-python-ds-ecosystem-2day.ipynb  pyproject.toml  requirements.txt
drafts/: FTS Seminarablauf.md  FTS.md
notebooks/: data-science-learning-paths-custom.ipynb  data-science-learning-paths.ipynb  test.ipynb
notebooks/cv/: cv-qa.ipynb
notebooks/db/: db-pandas-sql.ipynb  db-pymongo-mongodb.ipynb  db-sqalchemy.ipynb  db-sqlite3.ipynb
notebooks/dl/: dl-autoencoder.ipynb  dl-cnn-image-classification.ipynb  dl-exercise-cnn.ipynb  dl-exercise-fashion-mnist.ipynb  dl-exercise-solution-fashion-mnist.ipynb  dl-exercise-solutions.ipynb  dl-explainable.ipynb  dl-house-price-regression.ipynb  dl-iris-classifier.ipynb  dl-learning-process.ipynb  dl-pretrained.ipynb  dl-recurrent-neural-networks.ipynb  dl-save-models.ipynb  dl-tensorboard.ipynb  dl-walkthrough.ipynb  dl-why.ipynb  wip_cat-dog-cnn.ipynb  wip_dl-cat-dog.ipynb
notebooks/exercises/: exercise-bank-marketing.ipynb  exercise-deutschebahn.ipynb  exercise-museums-solution.ipynb  exercise-museums.ipynb  exercise-power-plants.ipynb  exercise-titanic-classifier.ipynb  exercise-titanic.ipynb  ml-exercise-churn-bank.ipynb  ml-exercise-house-prices-amsterdam.ipynb  ml-exercise-house-prices.ipynb  ml-exercise-solutions.ipynb  spark-exercise-bigrams-solution.ipynb  spark-exercise-bigrams.ipynb  spark-exercise-house-prices-solution.ipynb  spark-exercise-house-prices.ipynb  spark-exercise-museums-solution.ipynb  spark-exercise-solutions.ipynb
notebooks/index/: aml-advanced-machine-learning.ipynb  ape-advanced-python-ds-ecosystem-2day.ipynb  bdaps3-pyspark-big-data-3day.ipynb  bdas-big-data-analysis-pyspark-essentials.ipynb  bdas2-big-data-analysis-pyspark.ipynb  bde2e-big-data-end-to-end.ipynb  cej-computing-for-engineers-julia.ipynb  cv-computer-vision-deep-learning.ipynb  dap2-data-analysis-python.ipynb  dlt1-intro-dl-tensorflow-1day.ipynb  dlt2-intro-dl-tensorflow-2day.ipynb  dsml2-introduction-data-analysis-and-ml-2day.ipynb  iml4-intensive-machine-learning-4day.ipynb  kiml3-introduction-data-analysis-and-ml-3day.ipynb  mlp2-machine-learning-python-2day.ipynb  mls2-pyspark-machine-learning-2day.ipynb  mlts-machine-learning-time-series.ipynb  nlpp-natural-language-processing.ipynb  tsf-time-series-forecasting.ipynb
notebooks/julia/: julia-basics-exercises-solutions.ipynb  julia-basics-exercises.ipynb  julia-basics.ipynb  julia-build-packages.ipynb  julia-data-analysis.ipynb  julia-documentation.ipynb  julia-numeric-exercise-solutions.ipynb  julia-numeric.ipynb  julia-optimization.ipynb  julia-packages.ipynb  julia-parallel-exercise-solution.ipynb  julia-parallel-exercise.ipynb  julia-parallel.ipynb  julia-python.ipynb  julia-qa.ipynb  julia-simulation.ipynb  julia-testing.ipynb  julia-why.ipynb  python-julia.ipynb  test-julia.ipynb
notebooks/jupyter/: cheatsheet.ipynb
notebooks/ml/: classifier_gallery.py  ml-algo-hyperparameter-sklearn.ipynb  ml-algo-hyperparameter.ipynb  ml-anomaly-detection.ipynb  ml-classification-intro.ipynb  ml-classification-pipeline.ipynb  ml-clustering-advanced.ipynb  ml-clustering.ipynb  ml-compendium.ipynb  ml-dimensionality-reduction.ipynb  ml-exercise-anomaly-detection.ipynb  ml-explanatory.ipynb  ml-feature-engineering.ipynb  ml-feature-importance.ipynb  ml-feature-selection.ipynb  ml-house-prices.ipynb  ml-marbles-unsupervised-learning.ipynb  ml-outlook.ipynb  ml-profiling.ipynb  ml-recommender.ipynb  ml-regression-intro.ipynb  ml-regularization.ipynb  ml-workflow-marbles-part-1.ipynb  ml-workflow-marbles-part-2-only-basic-validation.ipynb  ml-workflow-marbles-part-2.ipynb  ml-workflow-marbles-part-3-exercises.ipynb  ml-workflow-with-iris.ipynb  ml_functions.py  wip_ml-yellowbrick.ipynb
notebooks/polars/: polars-benchmark.ipynb  polars-pipeline-larger-than-memory-solution.ipynb  (+6 more)
scripts/: export.py  nbexec.py  nbexec.sh  nbstripout.sh  setup.jl  update_copyright.py
services/: compose.yaml
(+92 files in other folders)
