[tool.poetry]
name = "data-science-learning-paths"
version = "0.2.0"
description = "Basic and advanced data science course material"
repository = "https://github.com/point8/data-science-learning-paths"
authors = []
license = "Attribution-NonCommercial-ShareAlike 4.0 International"

packages = [
    { include = "data_science_learning_paths", from = "library" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
bs4 = "^0.0.1"
findspark = "^2.0.1"
holidays = "^0.35"
lunarcalendar = "^0.0.9"
matplotlib = "^3.8.0"
nltk = "^3.8.1"
opencv-python = "^4.8.1.78"
openpyxl = "^3.1.2"
pandas-datareader = "^0.10.0"
pillow = "^10.1.0"
plotly = "^5.17.0"
python-dateutil = "^2.8.2"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
shap = "^0.43.0"
statsmodels = "^0.14.0"
tqdm = "^4.66.1"
tsfresh = "^0.20.1"
yellowbrick = "^1.5"
tweepy = "^4.14.0"
networkx = "^3.2"
tensorflow = "^2.14.0"
pandas = "^2.1.1"
polars = "^0.19.11"
pymongo = "^4.5.0"
sqlalchemy = "^2.0.22"
numpy = "^1.26.1"
scipy = "^1.11.3"
streamlit = "^1.27.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.7"
jupyterthemes = "^0.20.0"
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
