[project]
name = "data-science-learning-paths"
version = "0.2.0"
description = "Basic and advanced data science course material"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "bs4>=0.0.1,<1",
    "findspark>=2.0.1,<3",
    "holidays>=0.16,<1",
    "jupyter>=1.0.0,<2",
    "jupyterlab>=3.5.0,<5",
    "jupyterthemes>=0.20.0,<1",
    "LunarCalendar>=0.0.9,<1",
    "matplotlib>=3.6.2,<4",
    "msgpack>=1.0.4,<2",
    "nbstripout>=0.6.1,<1",
    "nltk>=3.7,<4",
    "opencv-python>=4.6.0,<5",
    "openpyxl>=3.0.10,<4",
    "pandas>=1.5.1,<3",
    "pandas-datareader>=0.10.0,<1",
    "Pillow>=9.3.0,<11",
    "plotly>=5.11.0,<6",
    "python-dateutil>=2.8.2,<3",
    "scikit-learn>=1.1.3,<2",
    "scikit-surprise>=1.1.3,<2",
    "seaborn>=0.12.1,<1",
    "shap>=0.41.0,<1",
    "statsmodels>=0.13.5,<1",
    "tqdm>=4.64.1,<5",
    "tsfresh>=0.19.0,<1",
    "yellowbrick>=1.5,<2",
    "tweepy>=4.12.1,<5",
    "networkx>=2.8.8,<4",
    "sktime>=0.14.0,<1",
    "tensorflow>2",
    "scikeras>=0.13.0,<1",
    "prophet>=1.1,<2",
    "data-science-learning-paths-library",
]

[tool.uv.sources]
data-science-learning-paths-library = { path = "library", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
